Bug and typo fixes
