# swagger.json
@@ -71,8 +71,8 @@
           "201": {
             "description": "Created"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -97,6 +97,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -150,8 +153,8 @@
           "200": {
             "description": "OK"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -172,8 +175,8 @@
           "200": {
             "description": "OK"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -205,7 +208,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "fist_name": {
+                "first_name": {
                   "example": "any"
                 },
                 "last_name": {
@@ -223,9 +226,6 @@
                 "time_onboard_months": {
                   "example": "any"
                 },
-                "wind_direction": {
-                  "example": "any"
-                },
                 "hire_date": {
                   "example": "any"
                 }
@@ -237,8 +237,8 @@
           "201": {
             "description": "Created"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -263,6 +263,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -302,7 +305,56 @@
                 "time_onboard_months": {
                   "example": "any"
                 },
-                "wind_direction": {
+                "hire_date": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Crew"
+        ],
+        "description": "Update an existing crew member by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "fist_name": {
+                  "example": "any"
+                },
+                "last_name": {
+                  "example": "any"
+                },
+                "rank": {
+                  "example": "any"
+                },
+                "age": {
+                  "example": "any"
+                },
+                "home_country": {
+                  "example": "any"
+                },
+                "time_onboard_months": {
                   "example": "any"
                 },
                 "hire_date": {
@@ -316,30 +368,8 @@
           "200": {
             "description": "OK"
           },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Crew"
-        ],
-        "description": "Delete a crew member by ID",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
